Correct event handling on mobile

--- a/static/css/predictor.css
+++ b/static/css/predictor.css
@@ -77,7 +77,7 @@ input[type=range]::-moz-range-thumb {
 }
 
 /* Floating buttons */
-.btn-floating {
+.btn-slider {
   background-color: var(--primary-colour);
   box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%), 0 1px 5px 0 rgb(0 0 0 / 20%);
   box-sizing: border-box;
@@ -98,7 +98,7 @@ input[type=range]::-moz-range-thumb {
   touch-action: manipulation;
 }
 
-.btn-floating:hover { opacity: var(--hover-opacity); }
+.btn-slider:hover { opacity: var(--hover-opacity); }
 
 /* Switches */
 /* Hide default HTML checkbox */
